k8s/apps/meow/jellyfin/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`meow.litarvan.com`)
      services:
        - name: jellyfin
          port: http
