k8s/apps/meow/jellyfin/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  rules:
    - host: meow.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
  tls:
    - hosts:
        - meow.litarvan.dev
      secretName: meow-tls
